updated app images, fixed desc text not showing when hovering library

--- a/dani/styles/style.css
+++ b/dani/styles/style.css
@@ -140,11 +140,12 @@ li.library img {
 }
 
 div.desc {
+  position: relative;
   color: white;
   padding: 0px;
   text-align: left;
   margin: -25px 0 0 5px;
-  text-shadow: 1px 1px 2px rgb(0, 0, 0);
+  text-shadow: 1px 1px 2px rgb(0, 0, 0); 
 }
 
 /* app ui */
